--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-async-handler": "^1.1.4",
+    "faker": "^4.1.0",
     "helmet": "^3.15.1",
     "jsonwebtoken": "^8.5.0",
     "mailgun-js": "^0.22.0",
