--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "commitizen": "^4.0.3",
     "coveralls": "^3.0.4",
+    "cz-conventional-changelog": "^3.0.2",
     "eslint": "^6.0.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.18.0",
