--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "convict": "^5.0.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "dotenv": "^8.0.0",
