--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,18 @@ jobs:
         - npm run test:mock
         - npm run test:coverage
         - npm run test:coveralls
+      after_success:
+        - wget https://raw.githubusercontent.com/calendz/travis-discord-webhook/master/send.sh
+        - chmod +x send.sh
+        - ./send.sh success $DISCORD_WEBHOOK_URL
+      after_failure:
+        - wget https://raw.githubusercontent.com/calendz/travis-discord-webhook/master/send.sh
+        - chmod +x send.sh
+        - ./send.sh failure $DISCORD_WEBHOOK_URL
+
+    # Build and push both current version & latest version
     - stage: Build Docker image
-      if: branch = feature/continuous-deployment
+      if: branch = master
       script:
       - "PACKAGE_VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]')"
       - echo "==== Building calendz/api:$PACKAGE_VERSION ===="
@@ -39,20 +49,12 @@ jobs:
       - docker tag calendz/api calendz/api:${PACKAGE_VERSION}
       - docker push calendz/api:latest
       - docker push calendz/api:${PACKAGE_VERSION}
+
+    # Deploy latest API version
     - stage: Deploy
-      if: branch = feature/continuous-deployment
+      if: branch = master
       script:
         - sh .travis/deploy.sh
-
-after_success:
-  - wget https://raw.githubusercontent.com/calendz/travis-discord-webhook/master/send.sh
-  - chmod +x send.sh
-  - ./send.sh success $DISCORD_WEBHOOK_URL
-
-after_failure:
-  - wget https://raw.githubusercontent.com/calendz/travis-discord-webhook/master/send.sh
-  - chmod +x send.sh
-  - ./send.sh failure $DISCORD_WEBHOOK_URL
 
 cache:
   directories:
