--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install: npm install
 jobs:
   include:
     - stage: Tests
+      if: tag IS blank
       script: 
         - npm run lint
         - npm run test:mock
