--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ services:
   - mongodb
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_994543d654b9_key -iv $encrypted_994543d654b9_iv
-  -in .travis/deploy_key.enc -out .travis/deploy_key -d
+- openssl aes-256-cbc -K $encrypted_6c0fe41f00fc_key -iv $encrypted_6c0fe41f00fc_iv
+  -in deploy_key.enc -out .travis/deploy_key -d
 
 before_script:
   - sleep 10
