--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ services:
 
 before_install:
 - openssl aes-256-cbc -K $encrypted_6c0fe41f00fc_key -iv $encrypted_6c0fe41f00fc_iv
-  -in deploy_key.enc -out .travis/deploy_key -d
+  -in .travis/deploy_key.enc -out .travis/deploy_key -d
 
 before_script:
   - sleep 10
