--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,9 @@ install: npm install
 jobs:
   include:
     - stage: Tests
-      if: tag IS blank
+      if: branch = develop AND \
+          tag IS blank AND \
+          commit_message !~ /(no-deploy|wip)/
       script: 
         - npm run lint
         - npm run test:mock
