--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,10 @@ install: npm install
 jobs:
   include:
     - stage: Tests
-      if: branch = develop AND \
-          tag IS blank AND \
-          commit_message !~ /(no-deploy|wip)/
+      if: |
+        branch = develop AND \
+        tag IS blank AND \
+        commit_message !~ /(no-deploy|wip)/
       script: 
         - npm run lint
         - npm run test:mock
