--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calendz-api",
-  "version": "1.0.0-alpha.8",
+  "version": "1.0.0-rc.1",
   "description": "calendz's backend api",
   "private": true,
   "main": "app.js",
