--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
-    "convict": "^5.2.0",
+    "convict": "^6.0.0",
+    "convict-format-with-validator": "^6.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
