--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,10 @@ services:
   - mongodb
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_6c0fe41f00fc_key -iv $encrypted_6c0fe41f00fc_iv
-  -in .travis/deploy_key.enc -out .travis/deploy_key -d
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+      openssl aes-256-cbc -K $encrypted_6c0fe41f00fc_key -iv $encrypted_6c0fe41f00fc_iv
+        -in .travis/deploy_key.enc -out .travis/deploy_key -d;
+    fi
 
 before_script:
   - sleep 10
