--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calendz-api",
-  "version": "1.6.0",
+  "version": "1.7.0-SNAPSHOT",
   "description": "calendz's backend api",
   "private": true,
   "main": "app.js",
