--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     "faker": "^6.6.6",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
-    "mailgun-js": "^0.22.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.1",
+    "nodemailer": "^6.9.0",
+    "nodemailer-express-handlebars": "^6.0.0",
     "util": "^0.12.5",
     "winston": "^3.8.2"
   },
