--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "multer": "^1.4.1",
     "nodemailer": "^6.9.0",
     "nodemailer-express-handlebars": "^6.0.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "util": "^0.12.5",
     "winston": "^3.8.2"
   },
